--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/form": "^2.1.27",
     "@heroui/input": "^2.4.28",
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
