--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.27",
+    "@heroui/card": "^2.2.25",
     "@heroui/form": "^2.1.27",
     "@heroui/input": "^2.4.28",
+    "@heroui/link": "^2.2.23",
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.85.0",
     "framer-motion": "^12.23.24",
     "next": "16.0.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
